Improved JwtFilter to correctly extract and validate token