@@ -2,9 +2,10 @@ package com.event.ticketbooking.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.web.cors.*;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -12,22 +13,16 @@ public class CorsConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // =========================
-        // ALLOWED ORIGINS
-        // =========================
-        configuration.setAllowedOriginPatterns(Arrays.asList(
+        configuration.setAllowedOriginPatterns(List.of(
                 "http://localhost:5173",
                 "http://localhost:*",
                 "https://*.vercel.app",
+                "https://event-ticket-booking-olive.vercel.app",
                 "https://event-ticket-booking-eight.vercel.app"
         ));
 
-        // =========================
-        // METHODS
-        // =========================
         configuration.setAllowedMethods(List.of(
                 "GET",
                 "POST",
@@ -36,27 +31,14 @@ public class CorsConfig {
                 "OPTIONS"
         ));
 
-        // =========================
-        // HEADERS
-        // =========================
         configuration.setAllowedHeaders(List.of("*"));
 
-        // =========================
-        // EXPOSE HEADERS (IMPORTANT FOR JWT)
-        // =========================
         configuration.setExposedHeaders(List.of(
                 "Authorization",
                 "Content-Type"
         ));
 
-        // =========================
-        // CREDENTIALS
-        // =========================
         configuration.setAllowCredentials(true);
-
-        // =========================
-        // CACHE PREFLIGHT RESPONSE
-        // =========================
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
